# zenoh-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  zenoh_cli.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-checks.yml  release.yml
example_plugin/: example.py  setup.py
tests/: test_codec_plugins.py  test_end2end.py  test_liveliness.py  test_stdout.py  test_ui_logic.py
