[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenoh-cli"
version = "0.6.8"
description = "CLI for Zenoh"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License 2.0" }
authors = [
    { name = "Fredrik Olsson", email = "fredrik.x.olsson@ri.se" }
]
maintainers = [
    { name = "Fredrik Olsson", email = "fredrik.x.olsson@ri.se" }
]
dependencies = [
    "eclipse-zenoh>=1.2.1",
    "parse",
    "networkx",
    "matplotlib",
    "jsonpointer",
    "importlib_metadata; python_version < '3.10'"
]
urls = { Homepage = "https://github.com/RISE-Maritime/zenoh-cli" }

[project.scripts]
zenoh = "zenoh_cli:main"

[dependency-groups]
dev = [
    "black==25.12.0",
    "pytest==8.4.2",
    "build"
]

[tool.setuptools]
py-modules = ["zenoh_cli"]
